--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,13 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
-    "vue": "^3.3.4"
+    "firebase": "^10.4.0",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@types/firebase": "^3.2.1",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
     "@vitejs/plugin-vue": "^4.2.3",
@@ -22,7 +26,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-vue": "^9.17.0",
-    "typescript": "^5.0.2",
+    "typescript": "^5.2.2",
     "vite": "^4.4.9",
     "vue-tsc": "^1.8.5"
   }
